tests/fail/empty_expression_tag.stderr
error: unexpected end of input, expected an expression
 --> tests/fail/empty_expression_tag.rs:5:21
  |
5 |     let _ = ui! { <{}/> };
  |                     ^
